# portfolio-analysis-agent

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  agent.py  analysis.ipynb  data.csv  docker-compose.yml  pull_info.py  pyproject.toml
infra/: dependency-check-rg.bicep  dependency-check.bicep  dependency-check.json
scripts/: check-dependencies.sh
